k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: user0107/social-frontend:latest   # 🔄 актуальний образ
          imagePullPolicy: Always                  # 🔁 завжди тягнути останній з Docker Hub
          ports:
            - containerPort: 80
