k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  rules:
  - host: ragazzi.in.ua
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-nodeport
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service    # назва сервісу бекенду
            port:
              number: 5000             # порт сервісу бекенду
  tls:
  - hosts:
    - ragazzi.in.ua
    secretName: ragazzi-inua-tls
